added Oauth 2.0 authentication to the server
