# routes/pilotRoutes.js
@@ -2,6 +2,7 @@ const router = require('express').Router();
 const pilotsController = require('../controllers/pilotsController');
 const { handleErrors, validateObjectId } = require('../utilities');
 const { pilotRules, validatePilot } = require('../utilities/pilotValidation');
+const { isAuthenticated } = require('../utilities/authenticate');
 
 // This route will retrieve all the pilots of the rebel alliance
 router.get('/', handleErrors(pilotsController.getAllPilots));
@@ -12,6 +13,7 @@ router.get('/:id', validateObjectId, handleErrors(pilotsController.getPilot));
 // This route will add a new pilot for the rebel alliance
 router.post(
   '/',
+  isAuthenticated,
   pilotRules(),
   validatePilot,
   handleErrors(pilotsController.addNewPilot)
@@ -20,6 +22,7 @@ router.post(
 // This route will modify the information of a pilot in the rebel alliance
 router.put(
   '/:id',
+  isAuthenticated,
   pilotRules(),
   validatePilot,
   handleErrors(pilotsController.updatePilot)
@@ -28,6 +31,7 @@ router.put(
 // This route will delete a pilot of the rebel alliance from the database
 router.delete(
   '/:id',
+  isAuthenticated,
   validateObjectId,
   handleErrors(pilotsController.deletePilot)
 );
